[tool.poetry]
name = "once-per-worker"
version = "0.1.0"
description = "Create dask.delayed objects that only run once per worker"
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dask = {extras = ["delayed"], version = "^2021.2.0"}

[tool.poetry.dev-dependencies]
distributed = "^2021.2.0"
ipython = "^7.22.0"
flake8 = "^3.9.1"
black = "^20.8b1"
dask = {extras = ["complete"], version = "^2021.2.0"}
graphviz = "^0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
